--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -40,7 +40,7 @@
     }
 
     @include respond(tab-port){ 
-        padding: 10rem 8rem;
+        padding: 10rem 4rem;
     }
 }
 
